# base-python-project

./: .gitignore  README.md  __init__.py  pyproject.toml  pytest.ini  requirements.txt
src/example_module/: __init__.py  example.py
