[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example_module"
authors = [{name = "Author Name", email = "author.name@example.com"}]
dynamic = ["version", "description"]
readme = "README.md"
# A classifier of "Private :: Do Not Upload" will prevent this package from
#  being uploaded to PyPI.
classifiers = ["Private :: Do Not Upload"]

[project.urls]
Home = "https://author.name.example.com"

[project.scripts]
runexample = "example_module.example:main"
